--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +23,7 @@
     "@angular/platform-browser": "~11.2.13",
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "node": "^17.7.2",
     "rxjs": "~6.6.0",
     "ts-md5": "^1.2.8",
